--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "bracketSpacing": false,
     "requirePragma": true,
     "insertPragma": true,
-    "printWidth": 80
+    "printWidth": 80,
+    "singleAttributePerLine": false
 }
