--- a/package.json
+++ b/package.json
@@ -6,27 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "eslint-plugin-prettier": "^4.2.1",
-    "feed-reader": "^6.0.2",
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "lint": "next lint",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "feed-reader": "^6.0.2",
+    "next": "12.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@vitejs/plugin-react": "^2.1.0",
+    "@vitest/coverage-c8": "^0.23.2",
     "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "happy-dom": "^6.0.4",
+    "jsdom": "^20.0.0",
+    "node-mocks-http": "^1.11.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
