chore(deps): Add HeadlessUI

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "types:generate": "npx openapi-typescript https://sgzquvqpyebgqnecoaoa.supabase.co/rest/v1/?apikey=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNnenF1dnFweWViZ3FuZWNvYW9hIiwicm9sZSI6ImFub24iLCJpYXQiOjE2NjM0NjE0MjcsImV4cCI6MTk3OTAzNzQyN30.o0BiNeWuUxDTC77mbzjJ2nMOvXrbxPWL8Mx6eHDeMdk --output src/types/supabase.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.2",
     "@supabase/supabase-js": "^1.35.6",
     "axios": "^0.27.2",
     "feed-reader": "^6.0.2",
