feat(/api/article/read): Add url=>text endpoint

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@mozilla/readability": "^0.4.2",
     "@supabase/supabase-js": "^2.0.0-rc.10",
     "@tailwindcss/line-clamp": "^0.4.2",
     "axios": "^0.27.2",
+    "cross-fetch": "^3.1.5",
     "feed-reader": "^6.0.2",
     "graphql": "^16.6.0",
     "next": "12.3.0",
+    "node-fetch": "^3.2.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "urql": "^3.0.3",
@@ -27,6 +30,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
     "@testing-library/react": "^13.4.0",
+    "@types/jsdom": "^20.0.0",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
