--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "cross-fetch": "^3.1.5",
     "feed-reader": "^6.0.2",
+    "framer-motion": "^7.3.6",
     "graphql": "^16.6.0",
     "next": "12.3.0",
     "node-fetch": "^3.2.10",
