--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^7.3.6",
     "graphql": "^16.6.0",
     "next": "12.3.0",
+    "next-pwa": "^5.6.0",
     "node-fetch": "^3.2.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
