--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint && yarn prettier --write src/",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "types:generate": "npx openapi-typescript https://sgzquvqpyebgqnecoaoa.supabase.co/rest/v1/?apikey=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNnenF1dnFweWViZ3FuZWNvYW9hIiwicm9sZSI6ImFub24iLCJpYXQiOjE2NjM0NjE0MjcsImV4cCI6MTk3OTAzNzQyN30.o0BiNeWuUxDTC77mbzjJ2nMOvXrbxPWL8Mx6eHDeMdk --output src/types/supabase.ts"
+    "types:generate": "npx openapi-typescript https://sgzquvqpyebgqnecoaoa.supabase.co/rest/v1/?apikey=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNnenF1dnFweWViZ3FuZWNvYW9hIiwicm9sZSI6ImFub24iLCJpYXQiOjE2NjM0NjE0MjcsImV4cCI6MTk3OTAzNzQyN30.o0BiNeWuUxDTC77mbzjJ2nMOvXrbxPWL8Mx6eHDeMdk --output src/types/supabase.ts",
+    "schema:generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
@@ -22,6 +23,7 @@
     "feed-reader": "^6.0.2",
     "framer-motion": "^7.3.6",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "next": "12.3.0",
     "next-pwa": "^5.6.0",
     "node-fetch": "^3.2.10",
@@ -31,6 +33,10 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.12.1",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-operations": "2.5.3",
+    "@graphql-codegen/typescript-urql": "^3.7.0",
     "@tailwindcss/typography": "^0.5.7",
     "@testing-library/react": "^13.4.0",
     "@types/jsdom": "^20.0.0",
