--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "feed-reader": "^6.0.2",
     "framer-motion": "^7.3.6",
     "graphql": "^16.6.0",
+    "graphql-codegen-golang": "^0.2.0-beta.0",
     "graphql-tag": "^2.12.6",
     "next": "12.3.0",
     "next-pwa": "^5.6.0",
