refactor(ui): Update UI styles, states and data-loading

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,5 @@
     "requirePragma": true,
     "insertPragma": true,
     "printWidth": 80,
-    "singleAttributePerLine": false
+    "singleAttributePerLine": true
 }
