--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-fetch": "^3.2.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "urql": "^3.0.3",
     "uuid": "^9.0.0"
   },
