feat(filters): Add filters for Reading List

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "@vitejs/plugin-react": "^2.1.0",
     "@vitest/coverage-c8": "^0.23.2",
     "autoprefixer": "^10.4.11",
@@ -53,6 +54,8 @@
     "eslint-config-next": "12.3.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "happy-dom": "^6.0.4",
     "jsdom": "^20.0.0",
     "node-mocks-http": "^1.11.0",
