--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,19 +2,38 @@
     "extends": [
         "eslint:recommended",
         "next/core-web-vitals",
-        "plugin:@typescript-eslint/recommended",
-        "prettier"
+        "plugin:@typescript-eslint/recommended"
     ],
-    "plugins": ["prettier", "@typescript-eslint"],
+    "plugins": [
+        "prettier",
+        "@typescript-eslint"
+    ],
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": "latest",
+        "project": "./tsconfig.json"
+    },
+    "ignorePatterns": [
+        "node_modules",
+        "build",
+        "dist",
+        "public"
+    ],
     "rules": {
-        "no-console": "error",
-        "@typescript-eslint/no-unused-vars": "error",
-        "@typescript-eslint/no-explicit-any": "warn",
-        "react/jsx-filename-extension": [
-            1,
+        "prettier/prettier": [
+            "error",
             {
-                "extensions": [".js", ".jsx", ".tsx"]
+                "endOfLine": "auto"
+            },
+            {
+                "usePrettierrc": true   
             }
-        ]
+        ],
+        "eqeqeq": "error",
+        "no-console": "warn",
+        "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/no-explicit-any": "warn"
     }
 }
