--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
         "eqeqeq": "error",
         "no-console": "warn",
         "@typescript-eslint/no-unused-vars": "error",
-        "@typescript-eslint/no-explicit-any": "warn"
+        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/no-extra-semi": "warn"
     }
 }
