--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,48 +1,22 @@
 {
-  "name": "RAG - RSS Feed Reader",
-  "short_name": "RAG",
-  "theme_color": "#0f172a",
-  "display": "fullscreen",
-  "orientation": "portrait",
-  "scope": "/",
-  "start_url": "/",
-   "icons": [
-    {
-     "src": "\/android-icon-36x36.png",
-     "sizes": "36x36",
-     "type": "image\/png",
-     "density": "0.75"
-    },
-    {
-     "src": "\/android-icon-48x48.png",
-     "sizes": "48x48",
-     "type": "image\/png",
-     "density": "1.0"
-    },
-    {
-     "src": "\/android-icon-72x72.png",
-     "sizes": "72x72",
-     "type": "image\/png",
-     "density": "1.5"
-    },
-    {
-     "src": "\/android-icon-96x96.png",
-     "sizes": "96x96",
-     "type": "image\/png",
-     "density": "2.0"
-    },
-    {
-     "src": "\/android-icon-144x144.png",
-     "sizes": "144x144",
-     "type": "image\/png",
-     "density": "3.0"
-    },
-    {
-     "src": "\/android-icon-192x192.png",
-     "sizes": "192x192",
-     "type": "image\/png",
-     "density": "4.0"
-    }
-   ],
-  "splash_pages": null
+    "name": "RAG - RSS Feed Reader",
+    "short_name": "RAG",
+    "theme_color": "#0f172a",
+    "display": "fullscreen",
+    "orientation": "portrait",
+    "scope": "/",
+    "start_url": "/",
+    "icons": [
+        {
+            "src": "/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "splash_pages": null
 }
