--- a/package.json
+++ b/package.json
@@ -12,59 +12,60 @@
     "schema:generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.2",
+    "@headlessui/react": "^1.7.10",
     "@mozilla/readability": "^0.4.2",
-    "@supabase/supabase-js": "^2.0.0-rc.10",
+    "@next/font": "^13.1.6",
+    "@supabase/supabase-js": "^2.7.1",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/graphql": "^14.5.0",
-    "axios": "^0.27.2",
+    "axios": "^1.3.3",
     "cross-fetch": "^3.1.5",
-    "feed-reader": "^6.0.2",
-    "framer-motion": "^7.3.6",
+    "feed-reader": "^6.1.4-rc1",
+    "framer-motion": "^9.0.2",
     "graphql": "^16.6.0",
     "graphql-codegen-golang": "^0.2.0-beta.0",
     "graphql-tag": "^2.12.6",
-    "next": "12.3.0",
+    "next": "^13.1.6",
     "next-pwa": "^5.6.0",
-    "node-fetch": "^3.2.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "react-markdown": "^8.0.3",
+    "node-fetch": "^3.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.5",
     "react-web-share": "^2.0.2",
     "urql": "^3.0.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.12.1",
-    "@graphql-codegen/typescript": "2.7.3",
-    "@graphql-codegen/typescript-operations": "2.5.3",
-    "@graphql-codegen/typescript-urql": "^3.7.0",
-    "@tailwindcss/typography": "^0.5.7",
+    "@graphql-codegen/cli": "3.0.0",
+    "@graphql-codegen/typescript": "3.0.0",
+    "@graphql-codegen/typescript-operations": "3.0.0",
+    "@graphql-codegen/typescript-urql": "^3.7.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "^13.4.0",
-    "@types/jsdom": "^20.0.0",
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
-    "@vitejs/plugin-react": "^2.1.0",
-    "@vitest/coverage-c8": "^0.23.2",
-    "autoprefixer": "^10.4.11",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@types/jsdom": "^21.1.0",
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-c8": "^0.28.5",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.34.0",
+    "eslint-config-next": "^13.1.6",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "happy-dom": "^6.0.4",
-    "jsdom": "^20.0.0",
-    "node-mocks-http": "^1.11.0",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.3",
-    "vitest": "^0.23.2"
+    "happy-dom": "^8.4.0",
+    "jsdom": "^21.1.0",
+    "node-mocks-http": "^1.12.1",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.6",
+    "typescript": "4.9.5",
+    "vitest": "^0.28.5"
   }
 }
