--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.5",
+    "react-swipeable": "^7.0.0",
     "react-web-share": "^2.0.2",
     "urql": "^3.0.3",
     "uuid": "^9.0.0"
