--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.7.1",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/graphql": "^14.5.0",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.3.3",
     "cross-fetch": "^3.1.5",
     "feed-reader": "^6.1.4-rc1",
