--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@headlessui/react": "^1.7.10",
     "@mozilla/readability": "^0.4.2",
     "@next/font": "^13.1.6",
-    "@supabase/supabase-js": "^2.7.1",
+    "@supabase/auth-helpers-nextjs": "^0.7.3",
+    "@supabase/supabase-js": "^2.29.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/graphql": "^14.5.0",
     "@vercel/analytics": "^1.0.1",
