--- a/package.json
+++ b/package.json
@@ -13,62 +13,63 @@
     "types:generate": "npx supabase gen types typescript --project-id sgzquvqpyebgqnecoaoa --schema public > lib/supabase.ts"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.10",
-    "@mozilla/readability": "^0.4.2",
+    "@headlessui/react": "^1.7.15",
+    "@mozilla/readability": "^0.4.4",
     "@supabase/auth-helpers-nextjs": "^0.7.3",
     "@supabase/supabase-js": "^2.29.0",
-    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/graphql": "^14.5.0",
     "@vercel/analytics": "^1.0.1",
-    "axios": "^1.3.3",
-    "cross-fetch": "^3.1.5",
+    "axios": "^1.4.0",
+    "cross-fetch": "^4.0.0",
     "feed-reader": "^6.1.4-rc1",
-    "framer-motion": "^9.0.2",
-    "graphql": "^16.6.0",
-    "graphql-codegen-golang": "^0.2.0-beta.0",
+    "framer-motion": "^10.13.1",
+    "graphql": "^16.7.1",
+    "graphql-codegen-golang": "^0.4.0",
     "graphql-tag": "^2.12.6",
     "next": "^13.4.12",
     "next-pwa": "^5.6.0",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-markdown": "^8.0.5",
-    "react-swipeable": "^7.0.0",
+    "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
+    "react-swipeable": "^7.0.1",
     "react-web-share": "^2.0.2",
-    "urql": "^3.0.3",
+    "urql": "^4.0.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "3.0.0",
-    "@graphql-codegen/typescript": "3.0.0",
-    "@graphql-codegen/typescript-operations": "3.0.0",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/typescript": "4.0.1",
+    "@graphql-codegen/typescript-operations": "4.0.1",
     "@graphql-codegen/typescript-urql": "^3.7.3",
     "@tailwindcss/typography": "^0.5.9",
-    "@testing-library/react": "^13.4.0",
-    "@types/jsdom": "^21.1.0",
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "@vitest/coverage-c8": "^0.28.5",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.34.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.16",
+    "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "@vitest/coverage-c8": "^0.33.0",
+    "autoprefixer": "^10.4.14",
+    "encoding": "^0.1.13",
+    "eslint": "8.45.0",
     "eslint-config-next": "^13.4.12",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "happy-dom": "^8.4.0",
-    "jsdom": "^21.1.0",
-    "node-mocks-http": "^1.12.1",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.6",
-    "typescript": "4.9.5",
-    "vitest": "^0.28.5"
+    "happy-dom": "^10.5.2",
+    "jsdom": "^22.1.0",
+    "node-mocks-http": "^1.12.2",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.1.6",
+    "vitest": "^0.33.0"
   }
 }
