feat(upgrade): add read page

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-markdown": "^8.0.7",
     "react-swipeable": "^7.0.1",
     "react-web-share": "^2.0.2",
+    "rehype-raw": "^6.1.1",
     "urql": "^4.0.5",
     "uuid": "^9.0.0"
   },
