--- a/package.json
+++ b/package.json
@@ -69,5 +69,9 @@
     "tailwindcss": "^3.2.6",
     "typescript": "4.9.5",
     "vitest": "^0.28.5"
+  },
+  "packageManager": "yarn@3.6.3",
+  "engines": {
+    "node": ">=20.17.0"
   }
 }
